# Keerti-Amit.ai

./: .env.local  .gitignore  README.md  REFACTORING.md  VLM(Vision_Language_Models).ipynb  app.py  flashcard_log.json  pyproject.toml  streamlit_app.py  vlm(vision_language_models).py
.streamlit/: secrets.toml
config/: app_config.py  model_config.py
database/: vector_db.py
pages/: __init__.py  battle_mode.py  data_ingestion.py  login.py  logout.py  page_mapper.py  practice_mode.py  settings.py
services/: agent.py  audio.py  ingest_docs.py
src/: __init__.py  app.py
src/config/: __init__.py  models.py  settings.py
src/core/: __init__.py
src/core/database/: __init__.py  vector_db.py
src/core/embeddings/: __init__.py  embedder.py
src/core/llm/: __init__.py  provider.py
src/services/: __init__.py  battle.py  config_manager.py  llm_client.py  practice.py  retrieval.py
src/services/audio/: __init__.py  speech.py
src/services/ingestion/: __init__.py  queue.py
src/tools/: __init__.py  context_retriever.py
src/ui/: __init__.py  navigation.py  utils.py
src/ui/pages/: battle_mode.py  data_ingestion.py  login.py  logout.py  practice_mode.py  settings.py
src/utils/: __init__.py  helpers.py  json_parser.py  path_setup.py
tools/: context_retriver.py
utilities/: helpers.py
