[project]
name = "second-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "dotenv>=0.9.9",
    "groq>=0.33.0",
    "langchain>=1.0.5",
    "langgraph>=1.0.2",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
