[project]
name = "second-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "dotenv>=0.9.9",
    "groq>=0.33.0",
    "langchain>=1.0.5",
    "langchain-community>=0.3.0",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "speechrecognition>=3.10.0",
    "sentence-transformers>=5.1.2",
    "streamlit-mic-recorder>=0.0.5",
    "streamlit>=1.51.0",
    "gTTS<=2.5.4",
    "byaldi>=0.0.7",
    "pdf2image>=1.17.0",
    "qwen-vl-utils>=0.0.14",
    "transformers>=4.53.3",
    "matplotlib>=3.10.7",
    "langsmith>=0.4.41",
]
